# vaultspec-a2a

./: .dockerignore  .env.example  .env.integration.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GEMINI.md  Justfile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.postgres.yml  docker-compose.prod.postgres.yml  docker-compose.prod.providers.yml  docker-compose.prod.yml  docker-compose.yml  dump_openapi.py  dump_openapi_full.py  eslint.config.js  lychee.toml  openapi.json  package-lock.json  package.json  prek.toml  probe_claude_acp.py  probe_gemini_acp.py  procs.toml  (+5 more)
.agent/workflows/: internalize-adrs.md
.agents/: mcp_config.json
.agents/rules/: vaultspec.builtin.md
.claude/: CLAUDE.md  launch.json  settings.local.json
.claude/agents/: vaultspec-adr-researcher.md  vaultspec-code-reviewer.md  vaultspec-docs-curator.md  vaultspec-high-executor.md  vaultspec-low-executor.md  vaultspec-researcher.md  vaultspec-standard-executor.md  vaultspec-writer.md
.claude/rules/: 90-custom.md  vaultspec-system.builtin.md
.codex/: config.toml
.codex/rules/: 02-operations.md  03-vaultspec.md  vaultspec-cli.builtin.md
.gemini/: GEMINI.md  SYSTEM.md  settings.json
.gemini/agents/: vaultspec-adr-researcher.md  vaultspec-code-reviewer.md  vaultspec-docs-curator.md  vaultspec-high-executor.md  vaultspec-low-executor.md  vaultspec-researcher.md  vaultspec-standard-executor.md  vaultspec-writer.md
.gemini/antigravity/: settings.json
.gemini/rules/: 01-core.md  vaultspec-rag.builtin.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: add-to-project.yml  bootstrap-branch.yml  ci-docker.yml  ci-frontend.yml  ci-migrations.yml  ci-python.yml  claude-code-review.yml  claude.yml  desktop-capsule.yml  eval.yml  migrations.yml  prodlike-docker.yml  test.yml
.vault/: a2a.sqlite  a2a.sqlite-shm  a2a.sqlite-wal  agent-definition-schema.index.md  apple-tree.index.md  approved-module-hierarchy.index.md  blackboard-content-mounting.index.md  containerization-strategy.index.md  contextual-anchoring-graph-lifecycle.index.md  control-layer-cli-justfile-separation.index.md  core-layer.index.md  database-layer.index.md  database-migration-framework.index.md  decoupled-mockllm.index.md  dependency-hygiene-cli-entry-point.index.md  docs-vault-migration.index.md  domain-logic.index.md  entry-point-layer.index.md  event-aggregation-server-side-replay.index.md  frontend-backend-contract.index.md  ide-mcp-setup.index.md  infra-config.index.md  layer-2d.index.md  llm-context-provider-abstraction.index.md  observability-telemetry-integration.index.md  orchestration-topology-pipeline.index.md  persistent-task-queue-schema.index.md  phase-artifact-gates.index.md  plan-approval-interrupt.index.md  postgres-dual-backend.index.md  process-and-workspace-management.index.md  protocol-bridging-translation.index.md  protocol-ecosystem-bridge.index.md  react-tailwind-figma-migration.index.md  service-layer.index.md  service-lifecycle-architecture.index.md  team-composition-topology.index.md  teamstate-enrichment-sdd-blackboard.index.md  tech-stack-deployment.index.md  thread-metadata-context-injection.index.md  (+4 more)
.vault/adr/: 2026-02-25-llm-context-provider-abstraction-adr.md  2026-02-26-approved-module-hierarchy-adr.md  2026-02-26-event-aggregation-server-side-replay-adr.md  2026-02-26-frontend-backend-contract-adr.md  2026-02-26-observability-telemetry-integration-adr.md  2026-02-26-orchestration-topology-pipeline-adr.md  2026-02-26-process-and-workspace-management-adr.md  2026-02-26-protocol-bridging-translation-adr.md  2026-02-26-protocol-ecosystem-bridge-adr.md  2026-02-26-tech-stack-deployment-adr.md  2026-02-27-agent-definition-schema-adr.md  2026-02-27-team-composition-topology-adr.md  2026-02-28-containerization-strategy-adr.md  2026-02-28-dependency-hygiene-cli-entry-point-adr.md  2026-02-28-react-tailwind-figma-migration-adr.md  2026-02-28-thread-metadata-context-injection-adr.md  2026-03-03-blackboard-content-mounting-adr.md  2026-03-03-contextual-anchoring-graph-lifecycle-adr.md  2026-03-03-persistent-task-queue-schema-adr.md  2026-03-03-phase-artifact-gates-adr.md  2026-03-03-plan-approval-interrupt-adr.md  2026-03-03-teamstate-enrichment-sdd-blackboard-adr.md  (+37 more)
.vaultspec/: workspace.json
_to_oragnize/: 2026-25-02-control-surface-research-plan.md
data/: orchestrator.db
docker/: README.md  dev.Dockerfile  prod.Dockerfile  run.py  vidaimock.Dockerfile
docs/: 2026-26-02-console-printer-research.md  IDE_SETUP.md  README.md  __init__.py  a2a-edge-conformance-verb-mapping.md  architecture.rst  conf.py  development.rst  edge-conformance.rst  glossary.rst  index.rst  operations.rst
evals/: conftest.py
knowledge/: KNOWLEDGE.md  a2a-protocol-agent-discovery.md  a2a-protocol-definitions.md  a2a-protocol-enterprise-ready.md  a2a-protocol-extensions.md  a2a-protocol-key-concepts.md  a2a-protocol-life-of-a-task.md  a2a-protocol-mcp-integration.md  a2a-protocol-specification.md  a2a-protocol-streaming-and-async.md  a2a-protocol-what-is-a2a.md
plans/: 2026-25-02-control-surface-research-plan.md
preps/: __main__.py  _runner.py  autonomous.py  pipeline_team.py  plan_approval.py  solo_coder.py
probes/: probe_graph_openai.py  probe_otel.py  probe_provider_gemini.py
schemas/: desktop-capsule-manifest.json  ws-client-messages.json  ws-server-events.json
scripts/: build_desktop_capsule.py  check_node_version.mjs  desktop_capsule_inputs.toml  engine_serve.py  export_openapi.py  export_ws_schema.py  generate_ws_types.py  prepare_desktop_capsule.py  vaultspec_core_enroll.py  vaultspec_install.py  verify_desktop_capsule.py
service/: .env.example  README.md  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.prod.postgres.yml  docker-compose.prod.yml
tests/: test_imports.py
(+2151 files in other folders)
