[project]
name = "vaultspec-a2a"
version = "0.1.0"
description = "A2A Agent Orchestration Implementation"
requires-python = ">=3.13"

dependencies = [
  "anyio>=4.9.0",
  "apscheduler>=3.10",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.133.1",
  "httpx>=0.28.1",
  "langchain-core>=1.2.16",
  "langchain-openai>=1.1.10",
  "langgraph>=0.2.16",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "mcp>=1.26.0",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
  "opentelemetry-instrumentation-fastapi>=0.60b0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "psycopg[binary,pool]>=3.2.9",
  "rich>=14.3.2",
  "sqlalchemy[asyncio]>=2.0.40",
  "starlette>=0.52.1",
  "uvicorn>=0.41.0",
  "websockets>=16.0",
  "alembic>=1.15.1",
  "click>=8.1",
  "langsmith>=0.3.1",
]

[project.scripts]
vaultspec-mcp = "vaultspec_a2a.protocols.mcp.__main__:main"

[dependency-groups]
dev = [
  "deptry>=0.23.0",
  "identify>=2.0.0",
  "nodeenv>=1.0.0",
  "prek>=0.3.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "pytest-timeout>=2.4.0",
  "ruff>=0.15.2",
  "tenacity>=9.0.0",
  "ty>=0.0.15",
  "import-linter>=2.0",
  "vaultspec-core",
  "websockets>=16.0",
]

[tool.uv.sources]
vaultspec-core = { git = "https://github.com/wgergely/vaultspec-core.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultspec_a2a"]

[tool.pytest.ini_options]
# --capture=sys: avoids pytest's fd-level dup2 which crashes silently under
# Git Bash / MinTTY (the _windowsconsoleio_workaround path). sys-level capture
# replaces sys.stdout/stderr in memory only — no CloseHandle, no silent death.
addopts = ["--durations=10", "--showlocals", "-ra", "--capture=sys", "-m", "not service"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
norecursedirs = [".venv", "knowledge", "node_modules", "ui"]
strict_xfail = true
# OTEL_SDK_DISABLED=true is set in the root conftest.py (collection-time)
# to silence gRPC exporter noise.  Service tests override this via CI env.
testpaths = ["src/vaultspec_a2a"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
timeout = "300"
markers = [
  "core: marks Layer 1 + Layer 1.5 tests — pure domain, zero infrastructure (run with '-m core')",
  "middleware: marks middleware-layer tests — protocol adapters + infra services, no orchestration deps (run with '-m middleware')",
  "unit: marks pure unit tests across all layers — no I/O, no database, no HTTP (run with '-m unit')",
  "service: marks Layer 3 tests — require Docker compose services. Run with pytest -m service.",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific rules
  "N",   # pep8-naming
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["ARG"]
"**/tests/**/*.py" = ["ARG"]
# FastAPI endpoints use Depends() in function defaults
"src/vaultspec_a2a/api/dependencies.py" = ["B008"]
"src/vaultspec_a2a/api/routes/*.py" = ["B008"]
"src/vaultspec_a2a/api/internal.py" = ["B008"]
"src/vaultspec_a2a/worker/app.py" = ["B008"]
# MCP server defines mcp=FastMCP() then imports tool modules for side-effect registration
"src/vaultspec_a2a/protocols/mcp/server.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["vaultspec_a2a"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.deptry]
extend_exclude = ["knowledge"]

[tool.deptry.package_module_name_map]
opentelemetry-sdk = "opentelemetry"
opentelemetry-exporter-otlp-proto-grpc = "opentelemetry"
opentelemetry-instrumentation-fastapi = "opentelemetry"
pytest-asyncio = "pytest_asyncio"

[tool.deptry.per_rule_ignores]
# DEP002: packages invoked as CLI tools or loaded via URL scheme (not direct Python imports)
DEP002 = [
  "ruff",
  "ty",
  "prek",
  "identify",
  "nodeenv",
  "pytest-timeout",
  "pytest-cov",
  "deptry",
  "import-linter",
  "vaultspec-core",
  # aiosqlite is loaded as the SQLAlchemy async driver via the URL scheme
  # "sqlite+aiosqlite://..." — never imported directly.
  "aiosqlite",
  # Runtime deps loaded by SQLAlchemy/LangGraph drivers, APScheduler, or
  # WebSocket protocol — never imported at module level.
  "apscheduler",
  "asyncpg",
  "psycopg",
  "websockets",
  "click",
]
# DEP003: src-layout project importing its own namespace is expected.
DEP003 = [
  "vaultspec_a2a",
]
# DEP004: test files inside src/**/ import dev packages (pytest, tenacity) as expected.
# This is the standard src-layout pattern; suppressing per-package is cleaner than
# excluding all test directories from scanning.
DEP004 = [
  "pytest",
  "pytest_asyncio",
  "tenacity",
]

[tool.ty.environment]
python-version = "3.13"
root = [".", "src"]

[tool.ty.src]

[tool.importlinter]
root_packages = ["vaultspec_a2a"]

[[tool.importlinter.contracts]]
name = "L1 -> L1.5 -> L2 architectural layers"
type = "layers"
layers = [
    "vaultspec_a2a.api | vaultspec_a2a.worker | vaultspec_a2a.protocols",
    "vaultspec_a2a.control | vaultspec_a2a.database | vaultspec_a2a.providers | vaultspec_a2a.telemetry | vaultspec_a2a.ipc | vaultspec_a2a.workspace | vaultspec_a2a.utils",
    "vaultspec_a2a.streaming | vaultspec_a2a.lifecycle",
    "vaultspec_a2a.graph | vaultspec_a2a.context | vaultspec_a2a.thread | vaultspec_a2a.team | vaultspec_a2a.domain_config",
]
# Pre-existing violations documented as architectural debt.
# Each line records a cross-layer import that predates the contract.
ignore_imports = [
    # team <-> graph/thread circular (graph.enums shared enum dependency)
    "vaultspec_a2a.team.team_config -> vaultspec_a2a.graph.enums",
    "vaultspec_a2a.team.tests.test_team_config -> vaultspec_a2a.graph.enums",
    "vaultspec_a2a.team.team_config -> vaultspec_a2a.thread.errors",
    "vaultspec_a2a.team.tests.test_team_config -> vaultspec_a2a.thread.errors",
    # graph -> thread (state, errors, enums used by graph nodes)
    "vaultspec_a2a.graph.compiler -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.compiler -> vaultspec_a2a.thread.errors",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.thread.enums",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.thread.errors",
    "vaultspec_a2a.graph.nodes.vault_reader -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.tests.nodes.test_worker -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.tests.nodes.test_worker -> vaultspec_a2a.thread.errors",
    "vaultspec_a2a.graph.tests.nodes.test_worker_integration -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.tests.nodes.test_supervisor -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.graph.tests.test_compiler -> vaultspec_a2a.thread.errors",
    # graph -> context (context building in graph nodes)
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.context.stage",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.context.token_budget",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.context.rules",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.context.anchoring",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.context.token_budget",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.context.rules",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.context.anchoring",
    # graph -> domain_config
    "vaultspec_a2a.graph.compiler -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.graph.nodes.supervisor -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.graph.nodes.worker -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.graph.nodes.vault_reader -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.graph.tools.task_queue -> vaultspec_a2a.domain_config",
    # graph -> team
    "vaultspec_a2a.graph.compiler -> vaultspec_a2a.team.team_config",
    "vaultspec_a2a.graph.tests.test_compiler -> vaultspec_a2a.team.team_config",
    # graph -> providers (test-only)
    "vaultspec_a2a.graph.tests.nodes.test_worker_integration -> vaultspec_a2a.providers.acp_chat_model",
    # thread -> graph.enums (shared enum dependency)
    "vaultspec_a2a.thread.snapshots -> vaultspec_a2a.graph.enums",
    "vaultspec_a2a.thread.permission_fsm -> vaultspec_a2a.graph.enums",
    # thread -> api (test-only schema validation)
    "vaultspec_a2a.thread.tests.test_snapshots -> vaultspec_a2a.api.schemas.snapshots",
    # context -> thread (anchoring and token budget)
    "vaultspec_a2a.context.anchoring -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.context.token_budget -> vaultspec_a2a.thread.state",
    "vaultspec_a2a.context.tests.test_token_budget -> vaultspec_a2a.thread.state",
    # context -> domain_config
    "vaultspec_a2a.context.metadata -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.context.anchoring -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.context.token_budget -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.context.tests.test_metadata -> vaultspec_a2a.domain_config",
    "vaultspec_a2a.context.tests.test_anchoring -> vaultspec_a2a.domain_config",
    # control -> database (service layer uses repository)
    "vaultspec_a2a.control.team_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.message_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.thread_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.permission_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.cancel_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.dispatch -> vaultspec_a2a.database",
    "vaultspec_a2a.control.dispatch -> vaultspec_a2a.database.session",
    "vaultspec_a2a.control.diagnostics -> vaultspec_a2a.database",
    "vaultspec_a2a.control.event_handlers -> vaultspec_a2a.database",
    "vaultspec_a2a.control.event_handlers -> vaultspec_a2a.database.session",
    "vaultspec_a2a.control.health -> vaultspec_a2a.database.session",
    "vaultspec_a2a.control.projection -> vaultspec_a2a.database",
    "vaultspec_a2a.control.projection -> vaultspec_a2a.database.models",
    "vaultspec_a2a.control.snapshot -> vaultspec_a2a.database.checkpoints",
    "vaultspec_a2a.control.thread_state_service -> vaultspec_a2a.database",
    "vaultspec_a2a.control.thread_state_service -> vaultspec_a2a.database.checkpoints",
    "vaultspec_a2a.control.repair_transitions -> vaultspec_a2a.database",
    "vaultspec_a2a.control.repair_transitions -> vaultspec_a2a.database.models",
    "vaultspec_a2a.control.team_service -> vaultspec_a2a.database.models",
    # control -> ipc (IPC schemas shared)
    "vaultspec_a2a.control.permission_service -> vaultspec_a2a.ipc.schemas",
    "vaultspec_a2a.control.message_service -> vaultspec_a2a.ipc.schemas",
    "vaultspec_a2a.control.cancel_service -> vaultspec_a2a.ipc.schemas",
    "vaultspec_a2a.control.dispatch -> vaultspec_a2a.ipc.schemas",
    "vaultspec_a2a.control.thread_service -> vaultspec_a2a.ipc.schemas",
    "vaultspec_a2a.control.event_handlers -> vaultspec_a2a.ipc.schemas",
    # control -> utils
    "vaultspec_a2a.control.config -> vaultspec_a2a.utils.enums",
    # database -> control.config (settings dependency)
    "vaultspec_a2a.database.checkpoints -> vaultspec_a2a.control.config",
    "vaultspec_a2a.database.migrate -> vaultspec_a2a.control.config",
    "vaultspec_a2a.database.session -> vaultspec_a2a.control.config",
    # providers -> control.config (settings dependency)
    "vaultspec_a2a.providers.factory -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers.gemini_auth -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers.mock_chat_model -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers.acp_chat_model -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers._acp_rpc_handlers -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers._acp_auth -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers._acp_session -> vaultspec_a2a.control.config",
    "vaultspec_a2a.providers.tests.test_gemini_auth -> vaultspec_a2a.control.config",
    # providers -> utils
    "vaultspec_a2a.providers.acp_chat_model -> vaultspec_a2a.utils.enums",
    "vaultspec_a2a.providers._acp_session -> vaultspec_a2a.utils.enums",
    "vaultspec_a2a.providers._acp_auth -> vaultspec_a2a.utils.enums",
    # providers -> workspace
    "vaultspec_a2a.providers.acp_chat_model -> vaultspec_a2a.workspace.environment",
    "vaultspec_a2a.providers._acp_session -> vaultspec_a2a.workspace.environment",
    "vaultspec_a2a.providers._acp_rpc_handlers -> vaultspec_a2a.workspace.environment",
    "vaultspec_a2a.providers._acp_rpc_handlers -> vaultspec_a2a.workspace.git_manager",
    # utils -> control (test-only)
    "vaultspec_a2a.utils.tests.test_logging -> vaultspec_a2a.control.config",
    # entry-point cross-imports (test-only)
    "vaultspec_a2a.protocols.mcp.tests.test_server -> vaultspec_a2a.api.app",
    "vaultspec_a2a.api.tests.test_internal -> vaultspec_a2a.worker.ipc",
]

[[tool.importlinter.contracts]]
name = "Entry points never cross-import"
type = "independence"
modules = [
    "vaultspec_a2a.api",
    "vaultspec_a2a.worker",
    "vaultspec_a2a.protocols",
]
ignore_imports = [
    # test-only cross-imports (not production code)
    "vaultspec_a2a.protocols.mcp.tests.test_server -> vaultspec_a2a.api.app",
    "vaultspec_a2a.api.tests.test_internal -> vaultspec_a2a.worker.ipc",
]

[[tool.importlinter.contracts]]
name = "Infra services never import from entry points"
type = "forbidden"
source_modules = [
    "vaultspec_a2a.control",
    "vaultspec_a2a.database",
    "vaultspec_a2a.providers",
    "vaultspec_a2a.telemetry",
]
forbidden_modules = [
    "vaultspec_a2a.api",
    "vaultspec_a2a.worker",
]
