[project]
name = "vaultspec-a2a"
version = "0.1.0"
description = "Headless A2A agent orchestration for the vaultspec workflow (gateway + worker, engine-facing five-verb edge)"
requires-python = ">=3.13"

dependencies = [
  "anyio>=4.9.0",
  "apscheduler>=3.10",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.133.1",
  "httpx>=0.28.1",
  "langchain-core>=1.2.16",
  "langchain-openai>=1.1.10",
  "langgraph>=0.2.16",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "mcp>=1.26.0",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
  "opentelemetry-instrumentation-fastapi>=0.60b0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "psycopg[binary,pool]>=3.2.9",
  "rich>=14.3.2",
  "sqlalchemy[asyncio]>=2.0.40",
  "starlette>=0.52.1",
  "uvicorn>=0.41.0",
  "websockets>=16.0",
  "alembic>=1.15.1",
  "click>=8.1",
  "langsmith>=0.3.1",
  "torch>=2.4",
  "vaultspec-rag[mcp]>=0.2.28",
]

[project.scripts]
vaultspec-a2a = "vaultspec_a2a.cli.main:main"
vaultspec-mcp = "vaultspec_a2a.protocols.mcp.__main__:main"

[dependency-groups]
dev = [
  "deptry>=0.23.0",
  "identify>=2.0.0",
  "nodeenv>=1.0.0",
  "prek>=0.3.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "pytest-timeout>=2.4.0",
  "ruff>=0.15.2",
  "tenacity>=9.0.0",
  "ty>=0.0.15",
  "vaultspec-core",
  "websockets>=16.0",
]

[tool.uv.sources]
vaultspec-core = { git = "https://github.com/wgergely/vaultspec-core.git", branch = "main" }
torch = [
    {index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.vaultspec-rag]
managed-torch-direct-dependency = "[project].dependencies"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultspec_a2a"]

[tool.pytest.ini_options]
# --capture=sys: avoids pytest's fd-level dup2 which crashes silently under
# Git Bash / MinTTY (the _windowsconsoleio_workaround path). sys-level capture
# replaces sys.stdout/stderr in memory only — no CloseHandle, no silent death.
addopts = ["--durations=10", "--showlocals", "-ra", "--capture=sys", "-m", "not service"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
norecursedirs = [".venv", "knowledge", "node_modules"]
strict_xfail = true
# OTEL_SDK_DISABLED=true is set in the root conftest.py (collection-time)
# to silence gRPC exporter noise.  Service tests override this via CI env.
testpaths = ["src/vaultspec_a2a"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
timeout = "300"
markers = [
  "core: marks Layer 1 + Layer 1.5 tests — pure domain, zero infrastructure (run with '-m core')",
  "middleware: marks middleware-layer tests — protocol adapters + infra services, no orchestration deps (run with '-m middleware')",
  "unit: marks pure unit tests across all layers — no I/O, no database, no HTTP (run with '-m unit')",
  "service: marks Layer 3 tests — require Docker compose services. Run with pytest -m service.",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific rules
  "N",   # pep8-naming
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["ARG"]
"**/tests/**/*.py" = ["ARG"]
# FastAPI endpoints use Depends() in function defaults
"src/vaultspec_a2a/api/dependencies.py" = ["B008"]
"src/vaultspec_a2a/api/routes/*.py" = ["B008"]
"src/vaultspec_a2a/api/internal.py" = ["B008"]
"src/vaultspec_a2a/worker/app.py" = ["B008"]
# MCP server defines mcp=FastMCP() then imports tool modules for side-effect registration
"src/vaultspec_a2a/protocols/mcp/server.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["vaultspec_a2a"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves field annotations at class-build time, so imports used only
# as model field types are runtime-required, not type-checking-only. Teaching
# TCH this keeps such imports at module scope instead of a TYPE_CHECKING block.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.deptry]
extend_exclude = ["knowledge"]

[tool.deptry.package_module_name_map]
opentelemetry-sdk = "opentelemetry"
opentelemetry-exporter-otlp-proto-grpc = "opentelemetry"
opentelemetry-instrumentation-fastapi = "opentelemetry"
pytest-asyncio = "pytest_asyncio"

[tool.deptry.per_rule_ignores]
# DEP002: packages invoked as CLI tools or loaded via URL scheme (not direct Python imports)
DEP002 = [
  "ruff",
  "ty",
  "prek",
  "identify",
  "nodeenv",
  "pytest-timeout",
  "pytest-cov",
  "deptry",
  "vaultspec-core",
  # aiosqlite is loaded as the SQLAlchemy async driver via the URL scheme
  # "sqlite+aiosqlite://..." — never imported directly.
  "aiosqlite",
]
# DEP004: test files inside src/**/ import dev packages (pytest, tenacity) as expected.
# This is the standard src-layout pattern; suppressing per-package is cleaner than
# excluding all test directories from scanning.
DEP004 = [
  "pytest",
  "pytest_asyncio",
  "tenacity",
]

[tool.ty.environment]
python-version = "3.13"
root = [".", "src"]

[tool.ty.src]
